--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -307,7 +307,7 @@ footer {
     background-color: #032f30;
     padding: 3rem 0 0;
     box-shadow: inset 0 1.5rem 1.5rem rgba(0, 0, 0, 0.2);
-
+    direction: rtl;
 }
 
 .footer_socials {
@@ -338,7 +338,7 @@ footer {
 .footer_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-left: 50px;
+    margin-right: 35px;
 }
 
 footer h4 {
